Fix position of centered loader to reduce jumpiness of UI
Former-commit-id: c7a89ded6df3fa945a3bf1660ca7a33fe08624df

--- a/src/shared/components/loadingIndicator/styles.module.scss
+++ b/src/shared/components/loadingIndicator/styles.module.scss
@@ -1,10 +1,15 @@
 .centered {
-  position:absolute;
-  top: 100px;
+  position:fixed;
+  top: 300px;
   left:50%;
   z-index:10000;
   text-align:center;
   transform: translateX(-50%);
+
+  :global(.hiddenByPosition) & {
+    display:none !important;
+  }
+
 }
 
 .centered-with-children {
